sites/docs/src/content/api_reference/3.3.2/api/pipelines/create.md
# nf_core.pipelines.create

A Textual app to create a pipeline.

### _`class{:python}`_`nf_core.pipelines.create.PipelineCreateApp(driver_class: Type[Driver] | None = None, css_path: str | PurePath | List[str | PurePath] | None = None, watch_css: bool = False, ansi_color: bool = False){:python}`

Bases: `App`\[`CreateConfig`]

A Textual app to manage stopwatches.

#### `BINDINGS{:python}`_: ClassVar\[list\[BindingType]]_ _= \[('d', 'toggle_dark', 'Toggle dark mode'), ('q', 'quit', 'Quit'), ('a', 'toggle_all', 'Toggle all')]_

The default key bindings.

#### `CSS_PATH{:python}`_: ClassVar\[CSSPathType | None]_ _= 'create.tcss'_

File paths to load CSS from.

#### `LOGGING_STATE{:python}`_= None_

#### `LOG_HANDLER{:python}`_= \<RichHandler (INFO)>_

#### `NFCORE_PIPELINE{:python}`_= True_

#### `SCREENS{:python}`_: ClassVar\[dict\[str, Callable\[\[], Screen\[Any]]]]_ _= {'basic_details': \<class 'nf_core.pipelines.create.basicdetails.BasicDetails'>, 'choose_type': \<class 'nf_core.pipelines.create.pipelinetype.ChoosePipelineType'>, 'final_details': \<class 'nf_core.pipelines.create.finaldetails.FinalDetails'>, 'github_exit': \<class 'nf_core.pipelines.create.githubexit.GithubExit'>, 'github_repo': \<class 'nf_core.pipelines.create.githubrepo.GithubRepo'>, 'github_repo_question': \<class 'nf_core.pipelines.create.githubrepoquestion.GithubRepoQuestion'>, 'logging': \<class 'nf_core.pipelines.create.loggingscreen.LoggingScreen'>, 'type_custom': \<class 'nf_core.pipelines.create.custompipeline.CustomPipeline'>, 'type_nfcore': \<class 'nf_core.pipelines.create.nfcorepipeline.NfcorePipeline'>, 'welcome': \<class 'nf_core.pipelines.create.welcome.WelcomeScreen'>}_

Screens associated with the app for the lifetime of the app.

#### `SUB_TITLE{:python}`_: str | None_ _= 'Create a new pipeline with the nf-core pipeline template'_

A class variable to set the default sub-title for the application.

To update the sub-title while the app is running, you can set the \[sub_title]\[textual.app.App.sub_title] attribute.
See also \[the Screen.SUB_TITLE attribute]\[textual.screen.Screen.SUB_TITLE].

#### `TEMPLATE_CONFIG{:python}`_= CreateConfig(org=None, name=None, description=None, author=None, version=None, force=True, outdir=None, skip_features=None, is_nfcore=None)_

#### `TITLE{:python}`_: str | None_ _= 'nf-core pipelines create'_

A class variable to set the _default_ title for the application.

To update the title while the app is running, you can set the \[title]\[textual.app.App.title] attribute.
See also \[the Screen.TITLE attribute]\[textual.screen.Screen.TITLE].

#### `_computes{:python}`_: ClassVar\[frozenset\[str]]_ _= frozenset({})_

#### `_css_type_name{:python}`_: str_ _= 'PipelineCreateApp'_

#### `_css_type_names{:python}`_: ClassVar\[frozenset\[str]]_ _= frozenset({'App', 'DOMNode', 'PipelineCreateApp'})_

#### `_decorated_handlers{:python}`_: dict\[type\[Message], list\[tuple\[Callable, str | None]]]_ _= {}_

#### `_inherit_bindings{:python}`_: ClassVar\[bool]_ _= True_

#### `_inherit_component_classes{:python}`_: ClassVar\[bool]_ _= True_

#### `_inherit_css{:python}`_: ClassVar\[bool]_ _= True_

#### `_merged_bindings{:python}`_: ClassVar\[BindingsMap | None]_ _= BindingsMap({'ctrl+q': \[Binding(key='ctrl+q', action='quit', description='Quit', show=False, key_display=None, priority=True, tooltip='Quit the app and return to the command prompt.', id=None, system=False)], 'ctrl+c': \[Binding(key='ctrl+c', action='help_quit', description='', show=False, key_display=None, priority=False, tooltip='', id=None, system=True)], 'd': \[Binding(key='d', action='toggle_dark', description='Toggle dark mode', show=True, key_display=None, priority=False, tooltip='', id=None, system=False)], 'q': \[Binding(key='q', action='quit', description='Quit', show=True, key_display=None, priority=False, tooltip='', id=None, system=False)], 'a': \[Binding(key='a', action='toggle_all', description='Toggle all', show=True, key_display=None, priority=False, tooltip='', id=None, system=False)]})_

#### `_reactives{:python}`_: ClassVar\[dict\[str, Reactive]]_ _= {'ansi_color': Reactive(False, name='ansi_color'), 'ansi_theme_dark': Reactive(\<rich.terminal_theme.TerminalTheme object>, name='ansi_theme_dark'), 'ansi_theme_light': Reactive(\<rich.terminal_theme.TerminalTheme object>, name='ansi_theme_light'), 'app_focus': Reactive(True, compute=False, name='app_focus'), 'sub_title': Reactive('', compute=False, name='sub_title'), 'theme': Reactive('textual-dark', name='theme'), 'title': Reactive('', compute=False, name='title')}_

#### `action_toggle_all() → None{:python}`

An action to toggle all Switches.

#### `action_toggle_dark() → None{:python}`

An action to toggle dark mode.

#### `on_button_pressed(event: Pressed) → None{:python}`

Handle all button pressed events.

#### `on_mount() → None{:python}`

#### `template_features_yml{:python}`_= {'code_quality': {'features': {'code_linters': {'custom_pipelines': True, 'default': True, 'description': 'The pipeline will include code linters and CI tests to lint your code: pre-commit, editor-config and prettier.', 'help_text': 'Pipelines include code linters to check the formatting of your code in order to harmonize code styles between developers.\nLinters will check all non-ignored files, e.g., JSON, YAML, Nextlow or Python files in your repository.\nThe available code linters are:\n\n- pre-commit (https://pre-commit.com/): used to run all code-linters on every PR and on ever commit if you run \`pre-commit install\` to install it in your local repository.\n- prettier (https://github.com/prettier/prettier): enforces a consistent style (indentation, quoting, line length, etc).\n', 'linting': {'files_exist': \['.prettierignore', '.prettierrc.yml']}, 'nfcore_pipelines': False, 'short_description': 'Use code linters', 'skippable_paths': \['.pre-commit-config.yaml', '.prettierignore', '.prettierrc.yml', '.github/workflows/fix-linting.yml']}}, 'name': 'Code Quality'}, 'components_modules': {'features': {'fastqc': {'custom_pipelines': True, 'default': True, 'description': 'The pipeline will include the FastQC module which performs quality control analysis of input FASTQ files.', 'help_text': 'FastQC is a tool which provides quality control checks on raw sequencing data.\nThe pipeline will include the FastQC module.\n', 'nfcore_pipelines': True, 'short_description': 'Use fastqc', 'skippable_paths': \['modules/nf-core/fastqc/']}, 'igenomes': {'custom_pipelines': True, 'default': True, 'description': 'The pipeline will be configured to use a copy of the most common reference genome files from iGenomes', 'help_text': 'Nf-core pipelines are configured to use a copy of the most common reference genome files.\n\nBy selecting this option, your pipeline will include a configuration file specifying the paths to these files.\n\nThe required code to use these files will also be included in the template.\nWhen the pipeline user provides an appropriate genome key,\nthe pipeline will automatically download the required reference files.\n\nFor more information about reference genomes in nf-core pipelines,\nsee the [nf-core docs](https://nf-co.re/docs/usage/reference_genomes).\n', 'linting': {'files_exist': \['conf/igenomes.config', 'conf/igenomes_ignored.config']}, 'nfcore_pipelines': True, 'short_description': 'Use reference genomes', 'skippable_paths': \['conf/igenomes.config', 'conf/igenomes_ignored.config']}, 'modules': {'custom_pipelines': True, 'default': True, 'description': 'Include all required files to use nf-core modules and subworkflows', 'help_text': 'It is \*recommended\* to use this feature if you want to use modules and subworkflows in your pipeline.\nThis will add all required files to use nf-core components or any compatible components from private repos by using \`nf-core modules\` and \`nf-core subworkflows\` commands.\n', 'linting': {'base_config': False, 'files_exist': \['conf/base.config', 'conf/modules.config', 'modules.json'], 'modules_config': False, 'modules_json': False, 'nfcore_components': False}, 'nfcore_pipelines': False, 'short_description': 'Use nf-core components', 'skippable_paths': \['conf/base.config', 'conf/modules.config', 'modules.json', 'modules', 'subworkflows']}, 'multiqc': {'custom_pipelines': True, 'default': True, 'description': 'The pipeline will include the MultiQC module which generates an HTML report for quality control.', 'help_text': 'MultiQC is a visualization tool that generates a single HTML report summarising all samples in your project. Most of the pipeline quality control results can be visualised in the report and further statistics are available in the report data directory.\n\nThe pipeline will include the MultiQC module and will have special steps which also allow the software versions to be reported in the MultiQC output for future traceability. For more information about how to use MultiQC reports, see http://multiqc.info.\n', 'linting': {'files_exist': \['assets/multiqc_config.yml'], 'files_unchanged': \['.github/CONTRIBUTING.md', 'assets/sendmail_template.txt'], 'multiqc_config': False}, 'nfcore_pipelines': True, 'short_description': 'Use multiqc', 'skippable_paths': \['assets/multiqc_config.yml', 'assets/methods_description_template.yml', 'modules/nf-core/multiqc/']}, 'nf_schema': {'custom_pipelines': True, 'default': True, 'description': 'Use the nf-schema Nextflow plugin for this pipeline.', 'help_text': '[nf-schema](https://nextflow-io.github.io/nf-schema/latest/) is used to validate input parameters based on a JSON schema.\nIt also provides helper functionality to create help messages, get a summary\nof changed parameters and validate and convert a samplesheet to a channel.\n', 'linting': {'files_exist': \['nextflow_schema.json'], 'nextflow_config': False, 'schema_description': False, 'schema_lint': False, 'schema_params': False}, 'nfcore_pipelines': True, 'short_description': 'Use nf-schema', 'skippable_paths': \['subworkflows/nf-core/utils_nfschema_plugin', 'nextflow_schema.json', 'assets/schema_input.json', 'assets/samplesheet.csv']}}, 'name': 'Components & Modules'}, 'configurations': {'features': {'gpu': {'custom_pipelines': True, 'default': False, 'description': 'Add GPU support to the pipeline', 'help_text': 'This will add GPU support to the pipeline. It will add a \`use_gpu\` parameter to the pipeline.\nThe pipeline will be able to run on GPU-enabled compute environments.\n', 'nfcore_pipelines': True, 'short_description': 'Use GPU', 'skippable_paths': False}, 'is_nfcore': {'custom_pipelines': False, 'default': True, 'description': '', 'help_text': '', 'linting': {'files_exist': \['CODE_OF_CONDUCT.md', 'assets/nf-core-{{short\_name}}\_logo_light.png', 'docs/images/nf-core-{{short\_name}}\_logo_light.png', 'docs/images/nf-core-{{short\_name}}\_logo_dark.png', '.github/ISSUE_TEMPLATE/config.yml', '.github/workflows/awstest.yml', '.github/workflows/awsfulltest.yml'], 'files_unchanged': \['CODE_OF_CONDUCT.md', 'assets/nf-core-{{short\_name}}\_logo_light.png', 'docs/images/nf-core-{{short\_name}}\_logo_light.png', 'docs/images/nf-core-{{short\_name}}\_logo_dark.png', '.github/ISSUE_TEMPLATE/bug_report.yml', '.github/CONTRIBUTING.md', '.github/PULL_REQUEST_TEMPLATE.md', 'assets/email_template.txt', 'docs/README.md'], 'multiqc_config': \['report_comment'], 'nextflow_config': \['manifest.name', 'manifest.homePage', 'validation.help.beforeText', 'validation.help.afterText', 'validation.summary.beforeText', 'validation.summary.afterText']}, 'nfcore_pipelines': False, 'short_description': "A custom pipeline which won't be part of the nf-core organisation but be compatible with nf-core/tools.", 'skippable_paths': \['.github/ISSUE_TEMPLATE/config', 'CODE_OF_CONDUCT.md', '.github/workflows/awsfulltest.yml', '.github/workflows/awstest.yml', '.github/workflows/release-announcements.yml']}, 'nf_core_configs': {'custom_pipelines': True, 'default': True, 'description': 'The pipeline will include configuration profiles containing custom parameters required to run nf-core pipelines at different institutions', 'help_text': 'Nf-core has a repository with a collection of configuration profiles.\n\nThose config files define a set of parameters which are specific to compute environments at different Institutions.\nThey can be used within all nf-core pipelines.\nIf you are likely to be running nf-core pipelines regularly it is a good idea to use or create a custom config file for your organisation.\n\nFor more information about nf-core configuration profiles, see the [nf-core/configs repository](https://github.com/nf-core/configs)\n', 'linting': {'files_exist': \['conf/igenomes.config'], 'included_configs': False, 'nextflow_config': \['process.cpus', 'process.memory', 'process.time', 'custom_config', 'params.custom_config_version', 'params.custom_config_base']}, 'nfcore_pipelines': False, 'short_description': 'Add configuration files', 'skippable_paths': False}, 'seqera_platform': {'custom_pipelines': True, 'default': True, 'description': 'Add a YAML file to specify which output files to upload when launching a pipeline from the Seqera Platform', 'help_text': 'When launching a pipeline with the Seqera Platform, a \`tower.yml\` file can be used to add configuration options.\n\nIn the pipeline template, this file is used to specify the output files of you pipeline which will be shown on the reports tab of Seqera Platform.\nYou can extend this file adding any other desired configuration.\n', 'nfcore_pipelines': False, 'short_description': 'Add Seqera Platform output', 'skippable_paths': \['tower.yml']}}, 'name': 'Configurations'}, 'continuous_integration_testing': {'features': {'ci': {'custom_pipelines': True, 'default': True, 'description': 'The pipeline will include several GitHub actions for Continuous Integration (CI) testing', 'help_text': 'Nf-core provides a set of Continuous Integration (CI) tests for Github.\nWhen you open a pull request (PR) on your pipeline repository, these tests will run automatically.\n\nThere are different types of tests:\n\* Linting tests check that your code is formatted correctly and that it adheres to nf-core standards\n For code linting they will use [prettier](https://prettier.io/).\n\* Pipeline tests run your pipeline on a small dataset to check that it works\n These tests are run with a small test dataset on GitHub and a larger test dataset on AWS\n\* Marking old issues as stale\n', 'linting': {'files_exist': \['.github/workflows/branch.yml', '.github/workflows/nf-test.yml', '.github/actions/get-shards/action.yml', '.github/actions/nf-test/action.yml', '.github/workflows/linting_comment.yml', '.github/workflows/linting.yml']}, 'nfcore_pipelines': False, 'short_description': 'Add Github CI tests', 'skippable_paths': \['.github/workflows/']}, 'nf-test': {'custom_pipelines': True, 'default': True, 'description': 'Add pipeline testing using nf-test', 'help_text': "This will add pipeline testing with [nf-test](https://www.nf-test.com/).\n\nWill add and \`nf-test.config\` file setting up the appropriate configuration to test your pipeline.\nOn top of that, it will also add the Continuous Integration (CI) GitHub actions to run these tests.\n\nIf you skip this feature, you will still be able to test your pipeline with a \`test\` profile by running the pipeline.\nBut you won't have the automated CI testing.\nYou can add CI by yourself.\n", 'linting': {'files_exist': \['.github/workflows/nf-test.yml', '.github/actions/get-shards/action.yml', '.github/actions/nf-test/action.yml', 'nf-test.config', 'tests/default.nf.test'], 'nf_test_content': False}, 'nfcore_pipelines': False, 'short_description': 'Add pipeline testing', 'skippable_paths': \['.github/workflows/nf-test.yml', '.github/actions/get-shards/action.yml', '.github/actions/nf-test/action.yml', 'nf-test.config', 'tests/default.nf.test', 'tests/.nftignore', 'tests/nextflow.config']}, 'test_config': {'custom_pipelines': True, 'default': True, 'description': 'Add two default testing profiles', 'help_text': 'This will add two default testing profiles to run the pipeline with different inputs.\nYou can customise them and add other test profiles.\n\nThese profiles can be used to run the pipeline with a minimal testing dataset with \`nextflow run \<your_pipeline> -profile test\`.\n\nThe pipeline will include two profiles: \`test\` and \`test_full\`.\nIn nf-core, we typically use the \`test\` profile to run the pipeline with a minimal dataset and the \`test_full\` to run the pipeline with a larger dataset that simulates a real-world scenario.\n', 'linting': {'files_exist': \['conf/test.config', 'conf/test_full.config', '.github/workflows/nf-test.yml', '.github/actions/get-shards/action.yml', '.github/actions/nf-test/action.yml'], 'files_unchanged': \['.github/CONTRIBUTING.md', '.github/PULL_REQUEST_TEMPLATE.md'], 'nextflow_config': False}, 'nfcore_pipelines': False, 'short_description': 'Add testing profiles', 'skippable_paths': \['conf/test.config', 'conf/test_full.config', '.github/workflows/awsfulltest.yml', '.github/workflows/awstest.yml', '.github/workflows/nf-test.yml', '.github/actions/get-shards/action.yml', '.github/actions/nf-test/action.yml']}}, 'name': 'Continuous Integration & Testing'}, 'development_environments': {'features': {'codespaces': {'custom_pipelines': True, 'default': True, 'description': 'The pipeline will include a devcontainer configuration for GitHub Codespaces, providing a development environment with nf-core/tools and Nextflow installed.', 'help_text': 'The pipeline will include a devcontainer configuration.\nThe devcontainer will create a GitHub Codespaces for Nextflow development with nf-core/tools and Nextflow installed.\n\nGithub Codespaces (https://github.com/features/codespaces) is an online developer environment that runs in your browser, complete with VSCode and a terminal.\n', 'linting': {'files_unchanged': \['.github/CONTRIBUTING.md']}, 'nfcore_pipelines': False, 'short_description': 'Include GitHub Codespaces', 'skippable_paths': \['.devcontainer/devcontainer.json']}, 'gitpod': {'custom_pipelines': True, 'default': True, 'description': 'Include the configuration required to use Gitpod.', 'help_text': 'Gitpod (https://www.gitpod.io/) provides standardized and automated development environments.\n\nIncluding this to your pipeline will provide an environment with the latest version of nf-core/tools installed and all its requirements.\nThis is useful to have all the tools ready for pipeline development.\n', 'nfcore_pipelines': False, 'short_description': 'Include a gitpod environment', 'skippable_paths': \['.gitpod.yml']}, 'vscode': {'custom_pipelines': True, 'default': True, 'description': 'Add a VSCode configuration to render website admonitions', 'help_text': 'This will add a VSCode configuration file to render the admonitions in markdown files with the same style as the nf-core website.\n\nAdds the \`.vscode\` directory to the pipelinerepository.\n', 'nfcore_pipelines': False, 'short_description': 'Render website admonitions in VSCode', 'skippable_paths': \['.vscode']}}, 'name': 'Development Environments'}, 'documentation_metadata': {'features': {'citations': {'custom_pipelines': True, 'default': True, 'description': 'Include pipeline tools citations in CITATIONS.md and a method description in the MultiQC report (if enabled).', 'help_text': 'If adding citations, the pipeline template will contain a \`CITATIONS.md\` file to add the citations of all tools used in the pipeline.\n\nAdditionally, it will include a YAML file (\`assets/methods_description_template.yml\`) to add a Materials & Methods section describing the tools used in the pieline,\nand the logics to add this section to the output MultiQC report (if the report is generated).\n', 'linting': {'files_exist': \['CITATIONS.md']}, 'nfcore_pipelines': False, 'short_description': 'Include citations', 'skippable_paths': \['assets/methods_description_template.yml', 'CITATIONS.md']}, 'documentation': {'custom_pipelines': True, 'default': True, 'description': 'Add documentation to the pipeline', 'help_text': 'This will add documentation markdown files where you can describe your pipeline.\nIt includes:\n- docs/README.md: A README file where you can describe the structure of your documentation.\n- docs/output.md: A file where you can explain the output generated by the pipeline\n- docs/usage.md: A file where you can explain the usage of the pipeline and its parameters.\n\nThese files come with an exemplary documentation structure written.\n', 'linting': {'files_exist': \['docs/output.md', 'docs/README.md', 'docs/usage.md']}, 'nfcore_pipelines': False, 'short_description': 'Add documentation', 'skippable_paths': \['docs']}, 'rocrate': {'custom_pipelines': True, 'default': True, 'description': 'Add a RO-Crate metadata file to describe the pipeline', 'help_text': 'RO-Crate is a metadata specification to describe research data and software.\nThis will add a \`ro-crate-metadata.json\` file to describe the pipeline.\n', 'linting': {'files_unchanged': \['.prettierignore'], 'files_warn': \['ro-crate-metadata.json']}, 'nfcore_pipelines': False, 'short_description': 'Add RO-Crate metadata', 'skippable_paths': \['ro-crate-metadata.json']}}, 'name': 'Documentation & metadata'}, 'notifications': {'features': {'adaptivecard': {'custom_pipelines': True, 'default': True, 'description': 'Enable pipeline status update messages through Microsoft Teams', 'help_text': 'This adds an Adaptive Card. A snippets of user interface.\nThis Adaptive Card is used as a template for pipeline update messages and it is compatible with Microsoft Teams.\n', 'linting': {'files_unchanged': \['.prettierignore']}, 'nfcore_pipelines': False, 'short_description': 'Support Microsoft Teams notifications', 'skippable_paths': \['assets/adaptivecard.json']}, 'email': {'custom_pipelines': True, 'default': True, 'description': 'Enable sending emails on pipeline completion.', 'help_text': 'Enable the option of sending an email which will include pipeline execution reports on pipeline completion.\n', 'linting': {'files_exist': \['assets/email_template.html', 'assets/sendmail_template.txt', 'assets/email_template.txt'], 'files_unchanged': \['.prettierignore']}, 'nfcore_pipelines': False, 'short_description': 'Enable email updates', 'skippable_paths': \['assets/email_template.html', 'assets/sendmail_template.txt', 'assets/email_template.txt']}, 'slackreport': {'custom_pipelines': True, 'default': True, 'description': 'Enable pipeline status update messages through Slack', 'help_text': 'This adds an JSON template used as a template for pipeline update messages in Slack.\n', 'linting': {'files_unchanged': \['.prettierignore']}, 'nfcore_pipelines': False, 'short_description': 'Support Slack notifications', 'skippable_paths': \['assets/slackreport.json']}}, 'name': 'Notifications'}, 'repository_setup': {'features': {'changelog': {'custom_pipelines': True, 'default': True, 'description': 'Add a CHANGELOG.md file.', 'help_text': 'Having a \`CHANGELOG.md\` file in the pipeline root directory is useful to track the changes added to each version.\n\nYou can read more information on the recommended format here: https://keepachangelog.com/en/1.0.0/\n', 'linting': {'files_exist': \['CHANGELOG.md']}, 'nfcore_pipelines': False, 'short_description': 'Add a changelog', 'skippable_paths': \['CHANGELOG.md']}, 'github': {'custom_pipelines': True, 'default': True, 'description': 'Create a GitHub repository for the pipeline.', 'help_text': 'This will create a GitHub repository for the pipeline.\n\nThe repository will include:\n- Continuous Integration (CI) tests\n- Issues and pull requests templates\n\nThe initialisation of a git repository is required to use the nf-core/tools.\nThis means that even if you unselect this option, your pipeline will still contain a \`.git\` directory and \`.gitignore\` file.\n', 'linting': {'files_exist': \['.github/ISSUE_TEMPLATE/bug_report.yml', '.github/ISSUE_TEMPLATE/feature_request.yml', '.github/PULL_REQUEST_TEMPLATE.md', '.github/CONTRIBUTING.md', '.github/.dockstore.yml'], 'files_unchanged': \['.github/ISSUE_TEMPLATE/bug_report.yml', '.github/ISSUE_TEMPLATE/config.yml', '.github/ISSUE_TEMPLATE/feature_request.yml', '.github/PULL_REQUEST_TEMPLATE.md', '.github/workflows/branch.yml', '.github/workflows/linting_comment.yml', '.github/workflows/linting.yml', '.github/CONTRIBUTING.md', '.github/.dockstore.yml'], 'readme': \['nextflow_badge']}, 'nfcore_pipelines': False, 'short_description': 'Use a GitHub repository.', 'skippable_paths': \['.github', '.gitattributes']}, 'github_badges': {'custom_pipelines': True, 'default': True, 'description': 'The README.md file of the pipeline will include GitHub badges', 'help_text': 'The pipeline \`README.md\` will include badges for:\n\* AWS CI Tests\n\* Zenodo DOI\n\* Nextflow\n\* nf-core template version\n\* Conda\n\* Docker\n\* Singularity\n\* Launching on Nextflow Tower\n', 'linting': {'readme': \['nextflow_badge', 'nfcore_template_badge']}, 'nfcore_pipelines': False, 'short_description': 'Add Github badges', 'skippable_paths': False}, 'license': {'custom_pipelines': True, 'default': True, 'description': 'Add the MIT license file.', 'help_text': 'To protect the copyright of the pipeline, you can add a LICENSE file.\nThis option ads the MIT License. You can read the conditions here: https://opensource.org/license/MIT\n', 'linting': {'files_exist': \['LICENSE'], 'files_unchanged': \['LICENSE']}, 'nfcore_pipelines': False, 'short_description': 'Add a license File', 'skippable_paths': \['LICENSE']}}, 'name': 'Repository Setup'}}_
